# logic-gate-simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: App.cpp  App.hpp  Block.cpp  Block.hpp  Block_container.cpp  Block_container.hpp  Connection_tracker.cpp  Connection_tracker.hpp  User_input_handler.cpp  User_input_handler.hpp  algorithms.c  algorithms.h  elements.c  elements.h  input.c  input.h  main.c  main.cpp  rendering.cpp  rendering.hpp  statistics.h  timer.c  timer.h  ui.c  ui.h
